@@ -1738,6 +1738,9 @@ define constant, begin
   0,NPCactivation:use
   1,NPCactivation:touch
   2,NPCactivation:stepon
+9,NPCstat:tag1
+10,NPCstat:tag2
+11,NPCstat:onetimeusetag
 12,NPCstat:script
 13,NPCstat:scriptargument
 14,NPCstat:vehicle
