@@ -26,6 +26,8 @@ Nov/Dec ??? 2017 [Etheldreme]
     * "reset formation" and "reset formation slot" command to undo
       scripted modifications to battle formations. [James]
     * "set slice size" and "slice is map layer" [Ralph]
+    * "NPCstat:tag1", "NPCstat:tag2" and "NPCstat:onetime use flag"
+      constants for "read NPC"/"alter NPC" [Ralph]
 
   * Changes
 
